<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="?android:selectableItemBackground">

	<ImageView
		android:id="@id/imageview_thumb"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="16dp"
		android:contentDescription="@string/site_thumb"
		android:scaleType="centerCrop"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/title_view"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginBottom="8dp"
		android:text="@string/titulo"
		android:maxLines="1"
		app:layout_constraintStart_toEndOf="@+id/imageview_thumb"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/description"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="8dp"
		android:layout_marginBottom="8dp"
		android:text="@string/descripcion"
		android:maxLines="1"
		app:layout_constraintBottom_toTopOf="@+id/rate"
		app:layout_constraintStart_toEndOf="@+id/imageview_thumb"
		app:layout_constraintTop_toBottomOf="@+id/title_view" />

	<TextView
		android:id="@+id/rate"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="40dp"
		android:text="@string/rate"
		android:maxLines="1"
		app:layout_constraintStart_toEndOf="@+id/imageview_thumb"
		app:layout_constraintTop_toBottomOf="@+id/title_view" />

	<RatingBar
		android:id="@+id/ratingBar"
		android:layout_width="174dp"
		android:layout_height="46dp"
		tools:layout_editor_absoluteX="191dp"
		tools:layout_editor_absoluteY="70dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
