<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/item_site_fragment"
    tools:context=".ItemSiteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@id/imageview_thumb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/site_thumb"
            android:scaleType="centerCrop"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="24dp"
            android:maxLines="1"
            android:text="@string/title"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintStart_toEndOf="@+id/imageview_thumb" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:maxLines="1"
            android:text="@string/description"
            app:layout_constraintStart_toEndOf="@+id/imageview_thumb"
            tools:layout_editor_absoluteY="59dp" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:maxLines="1"
            android:text="@string/rate"
            app:layout_constraintStart_toEndOf="@+id/imageview_thumb"
            app:layout_constraintTop_toBottomOf="@+id/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>