<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_detail"
    tools:context=".ui.DetailFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <TextView
            android:id="@+id/title_view_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sitio_Sevilla"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047" />

        <TextView
            android:id="@+id/text_description"
            android:layout_width="351dp"
            android:layout_height="123dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="40dp"
            android:text="@string/text_descripcion"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_detail"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageview_detail"
            android:layout_width="340dp"
            android:layout_height="255dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.641"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_view_detail"
            app:srcCompat="@drawable/ic_cafepalomino" />

        <Button
            android:id="@+id/ubication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Ubicacion"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.858"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Temperature"
            app:layout_constraintBottom_toTopOf="@+id/text_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.071"
            app:layout_constraintStart_toEndOf="@+id/textViewTemp"
            app:layout_constraintTop_toBottomOf="@+id/imageview_detail"
            app:layout_constraintVertical_bias="0.456" />

        <TextView
            android:id="@+id/geo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="geo"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_description"
            app:layout_constraintVertical_bias="0.347" />

        <TextView
            android:id="@+id/textViewTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Temperatura:"
            app:layout_constraintBottom_toTopOf="@+id/text_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageview_detail"
            app:layout_constraintVertical_bias="0.456" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>